# SCI_dmin-jax-tensorflow-cpp

./: CMakeLists.txt  README.md  contact_geometry.py  main.cpp  x.txt
